# work_dep

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  dependency.rs  main.rs  package.rs  workspace.rs  workspace_dependency.rs
